--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,6 +9,13 @@
 <body>
     <header>
         <h1>Ceneo.pl Web Scraper</h1>
+        <ul>
+            <li><a>Strona główna</a></li>
+            <li><a>Lista produktów</a></li>
+            <li><a>Informacje o produkcie</a></li>
+            <li><a>Opinie o produkcie</a></li>
+            <li><a>O autorze</a></li>
+        </ul>
     </header>
     <section>
         {% block content %}
