--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,3 +1,56 @@
+*{
+    margin: 0;
+}
+
 h1{
-    color: crimson;
+    color: goldenrod;
+    font-size: 50px;
+    background-image: conic-gradient(at 65% 30% ,azure 180deg, aqua 300deg, rgba(0,0,0,0));
+    border-radius: 50%;
+}
+
+li{
+    list-style-type: none;
+    text-align: left;
+    margin: 4px;
+}
+ul{
+    margin-top: 20px;
+}
+a:hover{
+    font-weight: bold;
+    background-image: radial-gradient(azure, rgba(0,0,0,0));
+    color: darkgoldenrod;
+}
+
+header{
+    text-align: center;
+    /*background-color: azure;*/
+    padding: 5px;
+    background-image: linear-gradient(to bottom right,aqua, aquamarine);
+    border-right: 0.5vw solid darkgoldenrod;
+    left: 0;
+    width: 20vw;
+    height: 100%;
+    position: fixed;
+    z-index: 1;
+}
+section{
+    font-size: 20px;
+    text-align: center;
+    padding-left: 20px;
+    padding-top: 20px;
+    margin-left: 20vw;
+    height: 95vh;
+    background-color: aquamarine;
+}
+footer{
+    background-color: darkgoldenrod;
+    color: gold;
+    position: fixed;
+    bottom: 0;
+    height: 5vh;
+    width: 100%;
+    padding-left: 50px;
+    margin-left: 20vw;
 }
