--- a/app/templates/author.html
+++ b/app/templates/author.html
@@ -1,4 +1,4 @@
 {% extends "base.html" %}
 {% block content %}
-    <p>To jest Strona o Autorze.</p>
+    <h2>To jest Strona o Autorze.</h2>
 {% endblock content %}
