--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,4 @@
 {% extends "base.html" %}
 {% block content %}
-    <p>To jest Strona Główna.</p>
+    <h2>To jest Strona Główna.</h2>
 {% endblock content %}
