--- a/app/templates/product.html
+++ b/app/templates/product.html
@@ -1,4 +1,4 @@
 {% extends "base.html" %}
 {% block content %}
-    <p>To jest Strona z opiniami o produkcie {{product_id}}.</p>
+    <h2>To jest Strona z opiniami o produkcie {{product_id}}.</h2>
 {% endblock content %}
