--- a/app/templates/products.html
+++ b/app/templates/products.html
@@ -1,4 +1,4 @@
 {% extends "base.html" %}
 {% block content %}
-    <p>To jest Strona z listą produktów.</p>
+    <h2>To jest Strona z listą produktów.</h2>
 {% endblock content %}
