--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,11 +10,10 @@
     <header>
         <h1>Ceneo.pl Web Scraper</h1>
         <ul>
-            <li><a>Strona główna</a></li>
-            <li><a>Lista produktów</a></li>
-            <li><a>Informacje o produkcie</a></li>
-            <li><a>Opinie o produkcie</a></li>
-            <li><a>O autorze</a></li>
+            <li><a href="{{url_for('index')}}">Strona główna</a></li>
+            <li><a href="{{url_for('products')}}">Lista produktów</a></li>
+            <li><a href="{{url_for('extract')}}">Ekstrakcja opinii</a></li>
+            <li><a href="{{url_for('author')}}">O autorze</a></li>
         </ul>
     </header>
     <section>
