--- a/app/templates/author.html
+++ b/app/templates/author.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
+
+{% block title %}
+    Autor projektu
+{% endblock title %}
+
 {% block content %}
-    <h2>To jest Strona o Autorze.</h2>
+    <p>To jest Strona o Autorze.</p>
 {% endblock content %}
