--- a/app/templates/extract.html
+++ b/app/templates/extract.html
@@ -1,11 +1,21 @@
 {% extends "base.html" %}
+
+{% block title %}
+    Ekstrakcja Opinii
+{% endblock title %}
+
+
+
 {% block content %}
-    <h2>Ekstrakcja Opinii</h2>
+    {% if error is defined %}
+        <h3>{{error}}.</h3>
+    {% endif %}
+    <!--h2>Ekstrakcja Opinii</h2-->
 
     <form method="post" action="{{url_for('extract')}}">
         <div>
             <label class="id" for="product_id">Id produktu: </label>
-            <input type="text" name="product_id" placeholder="tu kod produktu prosz'"> 
+            <input type="text" name="product_id" placeholder="tu kod produktu prosz'" required> 
         </div>
         <div>
             <label>musi byc od 5 do 10 cyfr</label>  
