--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title %}
+    Strona Główna
+{% endblock title %}
 {% block content %}
-    <h2>To jest Strona Główna.</h2>
+    <p>Jest to</p>
 {% endblock content %}
