--- a/app/templates/product.html
+++ b/app/templates/product.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
+{% block title %}
+    Opinie o Produkcie
+{% endblock title %}
+
+
 {% block content %}
-    <h2>To jest Strona z opiniami o produkcie {{product_id}}.</h2>
+    <p>To jest Strona z opiniami o produkcie {{product_id}}.</p>
 {% endblock content %}
