--- a/app/templates/products.html
+++ b/app/templates/products.html
@@ -1,4 +1,8 @@
 {% extends "base.html" %}
+{% block title %}
+    Lista Produktów
+{% endblock title %}
+
 {% block content %}
-    <h2>To jest Strona z listą produktów.</h2>
+    <p>{{products}}</p>
 {% endblock content %}
