--- a/app/templates/author.html
+++ b/app/templates/author.html
@@ -5,5 +5,5 @@
 {% endblock title %}
 
 {% block content %}
-    <p>To jest Strona o Autorze.</p>
+    <p>Jestem Paweł Szczecina</p>
 {% endblock content %}
