--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,5 +3,5 @@
     Strona Główna
 {% endblock title %}
 {% block content %}
-    <p>Jest to</p>
+    <p>Strona ta jest projektem web scrappera z serwisu Ceneo. Można na niej pobierać dane o konkretnych produktach i przeglądać opinie kupujących. </p>
 {% endblock content %}
