--- a/app/templates/products.html
+++ b/app/templates/products.html
@@ -4,5 +4,11 @@
 {% endblock title %}
 
 {% block content %}
-    <p>{{products}}</p>
+    {% for product in products %}
+        <h5><a href="{{url_for('product', product_id=product['product_id'])}}">Produkt: {{product["product_name"]}}</a></h5>
+        <p>Liczba opinii: {{product["opinions_count"]}}</p>
+        <p>Liczba zliczonych zalet: {{product["pros_count"]}}</p>
+        <p>Liczba zliczonych wad: {{product["cons_count"]}}</p>
+        <p>Średnia ocena: {{("%.2f" % product["average_rating"])}}</p>
+    {% endfor %}
 {% endblock content %}
